--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "eslint . --fix && prettier . --write",
+    "type-check": "tsc",
     "preview": "vite preview",
     "debug": "vite --debug",
     "test": "jest"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "framer-motion": "^11.3.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
